--- a/estructura de archivos/src/views/partials/header.ejs
+++ b/estructura de archivos/src/views/partials/header.ejs
@@ -72,8 +72,7 @@
                                 <a class="nav-link active" aria-current="page" href="#">LISTA DE DESEOS</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/products/productsLoad"><i
-                                        class="fa-solid fa-plus"></i> CREAR NUEVO PRODUCTO
+                                <a class="nav-link active" aria-current="page" href="/products/productsLoad"></i> Agregar producto
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -179,11 +178,13 @@
                             <li class="nav-item">
                                 <a class="nav-link active"  aria-current="page" href="/section/2">Recomendados</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link active"  aria-current="page" href="/section/2">Productos</a>
+                            </li>
                             <% if (locals.userLogin) { %>
                                 <li class="nav-item">
                                     <!--  Creación de producto -->
-                                    <a class="nav-link active" aria-current="page" href="/products/productsLoad"><i
-                                            class="fa-solid fa-plus"></i> Crear nuevo producto
+                                    <a class="nav-link active" aria-current="page" href="/products/productsLoad"> Agregar producto
                                     </a>
                                 </li>
                                 <% } %>
