--- a/estructura de archivos/public/css/general.css
+++ b/estructura de archivos/public/css/general.css
@@ -29,3 +29,9 @@ ul, ol {
     margin: 0;
     padding: 0;
 }
+.nav-link{
+    color:var(--bs-navbar-active-color)
+}
+.alertIcon{
+    color:var(--C_Pink_Logo)
+}
