--- a/estructura de archivos/src/views/users/register.ejs
+++ b/estructura de archivos/src/views/users/register.ejs
@@ -48,7 +48,7 @@
                                         <li id="mayus">Una mayúscula</li>
                                         <li id="minus">Una minúscula</li>
                                         <li id="num">Un número</li>
-                                        <li id="esp">Un caracter especial ($@$!%*?&)</li>
+                                        <li id="esp">Un caracter especial (-@$!%*?&_.)</li>
                                         <li id="min">Mínimo 8 caracteres</li>
                                         <li id="max">Máximo 25 caracteres</li>
                                     </ul>
