--- a/estructura de archivos/src/views/users/profile.ejs
+++ b/estructura de archivos/src/views/users/profile.ejs
@@ -18,7 +18,7 @@
                         </div>
     
                         <div>
-                            <p><%= user.address.street %>, <%= user.address.city %>, <%= user.address.province %></p>
+                            <p><%= user.address.street %> <%= user.address.city %> <%= user.address.province%></p>
                         </div>
                     </div>
 
@@ -28,7 +28,7 @@
                         </div>
                         
                         <div class="body__profile__userInfo--birthday">
-                            <p><%= moment(user.birthday).format('DD-MM-YYYY') %></p>
+                            <p><%= user.birthday ? moment(user.birthday).format('DD-MM-YYYY') : null %></p>
                         </div>
                     </div>
 
