--- a/estructura de archivos/src/views/users/profile.ejs
+++ b/estructura de archivos/src/views/users/profile.ejs
@@ -11,50 +11,60 @@
                     <h3>👋 ¡Hola, bienvenido <span><%= user.userName %></span>!</h3>
                 </div>
 
-                <div class="body__profile--userData">
-                    <div class="body__profile--avatarAndLocation">
+                <div class="body__profile--container">
                         <div class="body__profile--avatar">
                             <img src="/images/users/<%= user.avatar ? user.avatar.file : 'DEFAULT-IMAGE.jpg' %>" name ="avatar" id="avatar" alt="avatar">
                         </div>
-    
-                        <div>
-                            <p><%= user.address.street %> <%= user.address.city %> <%= user.address.province%></p>
-                        </div>
-                    </div>
 
-                    <div class="body__profile--userInfo">
-                        <div class="body__profile__userInfo--fullName">
-                            <p><%= user.firstName %> <%= user.lastName %></p>
-                        </div>
-                        
-                        <div class="body__profile__userInfo--birthday">
-                            <p><%= user.birthday ? moment(user.birthday).format('DD-MM-YYYY') : null %></p>
-                        </div>
-                    </div>
+                        <div class="body__profile--userData">
+                            <div class="body__profile--userFullName">
+                                <figure class="icon--container">
+                                    <i class="fas fa-user"></i>
+                                </figure>
+                                <p class="body__profile--titles">Nombre completo:</p>
+                                <h5><%= user.firstName %> <%= user.lastName %></h5>
+                            </div>
+            
+                            <div class="body__profile--birthday">
+                                <figure class="icon--container">
+                                    <i class="fas fa-calendar-days"></i>
+                                </figure>
+                                <p class="body__profile--titles">Fecha de nacimiento:</p>
+                                <h5><%= user.birthday ? moment(user.birthday).format('DD-MM-YYYY') : null %></h5> 
+                            </div>
 
-                    <div class="body__profile--contact">
-                        <div class="body__profile__contact--phone">
-                            <p><%= user.phone %></p>
-                        </div>
-    
-                        <div class="body__profile__contact--email">
-                            <p><%= user.email %></p>
-                        </div>
-                    </div>
+                            <div class="body__profile--address">
+                                <figure class="icon--container">
+                                    <i class="fas fa-map-pin"></i>
+                                </figure>
+                                <p class="body__profile--titles">Ubicación:</p>
+                                <h5><%= user.address.city && user.address.province ? `${user.address.city}, ${user.address.province}` : null %> </h5>
+                            </div>
+            
+                            <div class="body__profile--phone">
+                                <figure class="icon--container">
+                                    <i class="fas fa-phone"></i>
+                                </figure>
+                                <p class="body__profile--titles">Número de teléfono:</p>
+                                <h5><%= user.phone %></h5>
+                            </div>
+                            
+                            <div class="body__profile--email">
+                                <figure class="icon--container">
+                                    <i class="fas fa-envelope"></i>
+                                </figure>
+                                <p class="body__profile--titles">E-mail:</p>
+                                <h5><%= user.email %></h5>
+                            </div>
 
-                    <div class="body__profile--aboutMe">
-                        <div class="body__profile__aboutMe--text">
-                            <h4>Acerca de mí...</h4>
-                            <p><%= user.aboutMe %></p>
+                            <div class="body__profile--aboutMe">
+                                <figure class="icon--container">
+                                    <i class="fas fa-pen-to-square"></i>
+                                </figure>
+                                <p class="body__profile--titles">Acerca de mí:</p>
+                                <h5><%= user.aboutMe %> </h5>
+                            </div>
                         </div>
-                    </div>
-
-                    <div class="body__profile--products">
-                        <div class="body__profile__product--productsInSale">
-                            <h4>Mis productos en venta</h4>
-                            <p>acá irán los productos a la venta</p> <!-- acá irán los productos del usuario -->
-                        </div>
-                    </div>
 
                 </div>
 
