--- a/estructura de archivos/src/views/users/profileUpdate.ejs
+++ b/estructura de archivos/src/views/users/profileUpdate.ejs
@@ -6,7 +6,7 @@
         <div class="body--form">
             <%- include('../partials/logoForms',{ title:'Perfil de usuario' }) %>
             
-            <div class="body__form--box">
+            <div class="body__profile--box">
                 <div class="body__form--title">
                     <h2>Mi Perfil</h2>
                 </div>
@@ -84,14 +84,12 @@
                     </div>
                 </form>
 
-                <div class="body__form__redirect">
-                    <div class="body__form__redirect--unsave">
-                        <a href="/">No quiero guardar los cambios</a>
-                    </div>
+                <div class="body__form__redirect--unsave">
+                    <a href="/">No quiero guardar los cambios</a>
+                </div>
 
-                    <div class="body__form__redirect--deleteAcc">
-                        <a href="/users/deleteAcc">Eliminar Cuenta</a>
-                    </div>
+                <div class="body__form__redirect--deleteAcc">
+                    <a href="/users/deleteAcc">Eliminar Cuenta</a>
                 </div>
             </div>
         </div>
