productEdit validation frontEnd done! and productLoad code update!

--- a/estructura de archivos/src/views/index.ejs
+++ b/estructura de archivos/src/views/index.ejs
@@ -82,13 +82,13 @@
         </section>
 
         <div class="main-content-buttom"><button class="main-display-button">Ver más</button></div>
-        <h2>Producto de nuestros usuarios</h2>
+<!--         <h2>Producto de nuestros usuarios</h2>
         <section class="main__section--product">
             <% productsOfUsers.forEach(({id, name, price, image, discount})=> { %>
                 <%- include("./partials/product",{id, name, price, image, discount, toThousand }) %>
                 <% }) %>
         </section>
-        <div class="main-content-buttom"><button class="main-display-button ">Ver más</button></div>
+        <div class="main-content-buttom"><button class="main-display-button ">Ver más</button></div> -->
     </main>
     <!-- / M A I N -->
     <!-- F O O T E R -->
