--- a/estructura de archivos/src/views/products/productEdit.ejs
+++ b/estructura de archivos/src/views/products/productEdit.ejs
@@ -14,20 +14,17 @@
                     <div class="">
                         <h3 class="products-titulo">Editar producto</h3>
                     </div>
-                    <form action="/products/update/<%= productToEdit.id %>?_method=PUT" method="POST" id="formEdit">
+                    <form action="/products/update/<%= productToEdit.id %>?_method=PUT" method="POST" id="form-productEdit">
                         <div class="form-box">
                             <label class="form__label" for="name">Título:</label>
-                            <input class="form__input" type="text" id="name" autocomplete="off" name="name"
-                                placeholder="Título del producto"
-                                value="<%= locals.old && old.name ? old.name : productToEdit.name %>">
-                            <small class="form-error">
-                                <%= locals.errors && errors.name ? errors.name.msg : null %>
-                            </small>
+                            <input class="form__input form-control <%= locals.errors && errors.name ? 'is-invalid' : null %>" type="text" id="name" autocomplete="off" name="name" placeholder="Título del producto"value="<%= locals.old && old.name ? old.name : productToEdit.name %>">
+                            <small class="form-error"><%= locals.errors && errors.name ? errors.name.msg : null %></small>
+                            <small id="errorName" class="text-danger"></small>
                         </div>
 
                         <div class="form-box">
                             <label class="form__label">Categorías:</label>
-                            <select name="category" id="">
+                            <select name="category" id="category">
                                 <% categories.forEach(category=> { %>
                                     <option <%=productToEdit.categoryId==category.id ? "selected" : "" %> value="<%=
                                             category.id %>"><%= category.name %>
@@ -35,85 +32,77 @@
                                     <% }); %>
                             </select>
 
-                            <small class="form-error">
-                                <%= locals.errors && errors.category ? errors.category.msg : null %>
-                            </small>
+                            <small class="form-error"><%= locals.errors && errors.category ? errors.category.msg : null %></small>
+                            <small id="errorCategory" class="text-danger"></small>
                         </div>
 
                         <div class="form-box">
                             <label class="form__label" for="price">Precio:</label>
-                            <input class="form__input" type="number" id="price" name="price"
+                            <input class="form__input form-control <%= locals.errors && errors.name ? 'is-invalid' : null %>" type="number" id="price" name="price"
                                 placeholder="Precio del producto"
                                 value="<%= locals.old && old.price ? old.price : productToEdit.price %>">
-                            <small class="form-error">
-                                <%= locals.errors && errors.price ? errors.price.msg : null %>
-                            </small>
+                            <small class="form-error"><%= locals.errors && errors.price ? errors.price.msg : null %></small>
+                            <small id="errorPrice" class="text-danger"></small>
                         </div>
 
                         <div class="form-box">
                             <label class="form__label">Descuento:</label>
-                            <input type="text" name="discount" id="discount" placeholder="Ej: 5"
-                                value="<%= locals.old && old.discount ? old.discount : productToEdit.discount %>">
-                            <small class="form-error">
-                                <%= locals.errors && errors.discount ? errors.discount.msg : null %>
-                            </small>
+                            <input class="form__input form-control <%= locals.errors && errors.name ? 'is-invalid' : null %>" type="text" name="discount" id="discount" placeholder="Ej: 5" value="<%= locals.old && old.discount ? old.discount : productToEdit.discount %>">
+                            <small class="form-error"> <%= locals.errors && errors.discount ? errors.discount.msg : null %></small>
+                            <small id="errorDiscount" class="text-danger"></small>
                         </div>
 
                         <div class="form-box">
                             <label class="form__label" for="stock">Stock disponible:</label>
-                            <input class="form__input" type="number" id="" name="stock" placeholder=""
-                                value="<%= locals.old && old.stock ? old.stock : productToEdit.stock %>">
-                            <small class="form-error">
-                                <%= locals.errors && errors.stock ? errors.stock.msg : null %>
-                            </small>
+                            <input class="form__input form-control <%= locals.errors && errors.name ? 'is-invalid' : null %>" type="number" id="stock" name="stock" value="<%= locals.old && old.stock ? old.stock : productToEdit.stock %>">
+                            <small class="form-error"><%= locals.errors && errors.stock ? errors.stock.msg : null %></small>
+                            <small id="errorStock" class="text-danger"></small>
                         </div>
 
                         <div class="form-box">
                             <label class="form-label">Sección:</label>
                             <select name="section" id="section">
                                 <% sections.forEach(section=> { %>
-                                    <option <%=productToEdit.sectionId==section.id ? "selected" : "" %> value="<%=
-                                            section.id %>"><%= section.name %>
+                                    <option <%=productToEdit.sectionId==section.id ? "selected" : "" %> value="<%=section.id %>"><%= section.name %>
                                     </option>
                                     <% }); %>
                             </select>
-                            <small class="form-error">
-                                <%= locals.errors && errors.section ? errors.section.msg : null %>
-                            </small>
+                            <small class="form-error"><%= locals.errors && errors.section ? errors.section.msg : null %></small>
+                            <small id="errorSection" class="text-danger"></small>
                         </div>
 
                         <div class="form-box">
                             <label class="form__label">Companía:</label>
                             <select name="company" id="company">
                                 <% brands.forEach(company=> { %>
-                                    <option <%=productToEdit.brandId==company.id ? "selected" : "" %> value="<%=
-                                            company.id %>"><%= company.name %>
+                                    <option <%=productToEdit.brandId==company.id ? "selected" : "" %> value="<%=company.id %>"><%= company.name %>
                                     </option>
                                     <% }); %>
                             </select>
                             <small class="form-error">
                                 <%= locals.errors && errors.company ? errors.company.msg : null %>
                             </small>
+                            <small id="errorCompany" class="text-danger"></small>   
                         </div>
 
                         <div class="form-box">
                             <label class="form__label" for="description">Descripción:</label>
-                            <textarea name="description" id="description" cols="30" rows="5" minlength="20"
-                                maxlength="250"><%=locals.old && old.description ? old.description : productToEdit.description %></textarea>
+                            <textarea name="description" id="description" cols="30" rows="5"><%=locals.old && old.description ? old.description : productToEdit.description %></textarea>
+                            <small id="errorDescription" class="text-danger"></small>
                         </div>
 
 
                         <div class="form-box load-image">
                             <label class="form__label" for="imagen">Añadir Imágenes:</label>
-                            <input type="file" name="imagen" accept=".jpg" multiple>
-                            <small class="form-error">
-                                <%= locals.errors && errors.images ? errors.images.msg : null %>
-                            </small>
+                            <input class="form__input form-control <%= locals.errors && errors.name ? 'is-invalid' : null %>" type="file" name="imagen" id="image" accept=".jpg" multiple>
+                            <small class="form-error"><%= locals.errors && errors.images ? errors.images.msg : null %></small>
+                            <small id="errorImage" class="text-danger"></small>
                         </div>
 
                         <div class="form-box buttons">
                             <button class="total-comprar" type="reset">Cancelar</button>
                             <button class="total-comprar" id="editConfirm" type="submit">Confirmar</button>
+                            <p id="msgError" class="text-danger" ></p>
                         </div>
                     </form>
                 </div>
@@ -122,7 +111,8 @@
             <!-- F O O T E R -->
             <%- include('../partials/footer',{ title:'home', }) %>
                 <!-- / F O O T E R -->
-                
+        
+        <script src="/javascripts/productEdit.js"></script>
     </body>
 
 </html>
