--- a/estructura de archivos/src/views/index.ejs
+++ b/estructura de archivos/src/views/index.ejs
@@ -17,13 +17,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/banners/banner-de-ofertas.webp" class="d-block w-100 main--img-banner" alt="...">
+                    <img src="/images/banners/banner-ofertas-semanales.jpg" class="d-block w-100 main--img-banner" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banners/banner-de-ofertas1.webp" class="d-block w-100 main--img-banner" alt="...">
+                    <img src="/images/banners/banner-descuento-nuevos.jpg" class="d-block w-100 main--img-banner" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banners/banner-de-ofertas2.webp" class="d-block w-100 main--img-banner" alt="...">
+                    <img src="/images/banners/banner-reserva-precio.jpg" class="d-block w-100 main--img-banner" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
