--- a/estructura de archivos/admin/src/App.css
+++ b/estructura de archivos/admin/src/App.css
@@ -4772,6 +4772,12 @@ input[type=submit].btn-block {
   border-bottom-left-radius: .35rem
 }
 
+.category-Name-totalProduct{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .card-body {
   flex: 1 1 auto;
   padding: 1.25rem
