--- a/estructura de archivos/src/views/partials/header.ejs
+++ b/estructura de archivos/src/views/partials/header.ejs
@@ -1,4 +1,5 @@
 <header id="top">
+    <%- include('modalCart') %>
     <div class="header__top--general">
         <nav class="navbar navbar-dark bg-dark fixed-top header__top--general-navbar">
             <div class="container-fluid">
@@ -16,7 +17,7 @@
                     </form>
 
                     <button>
-                        <a href="/products/cart"><i class="fa-solid fa-cart-shopping"></i></a>
+                        <a  data-bs-toggle="modal" data-bs-target="#cartModal"><i class="fa-solid fa-cart-shopping"></i></a>
                     </button>
                     <li class="nav-item dropdown header__top--login">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -193,3 +194,4 @@
         </nav>
     </div>
 </header>
+<script src="/javascripts/cart.js"></script>
